# Projekt_PEA

./: README.md
BF&BnB-LC/: CMakeLists.txt  main.cpp
GA/: CMakeLists.txt  main.cpp
SA&TS/: CMakeLists.txt  main.cpp
